--- a/doc/hist_horse_pop.Rmd
+++ b/doc/hist_horse_pop.Rmd
@@ -1,11 +1,15 @@
 ---
 title: "Historical horse population in Canada"
+bibliography: references.bib
 output: github_document
+params:
+  province: "British Columbia"
 ---
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = FALSE)
 library(tidyverse)
+library(knitr)
 ```
 
 ## Aim
@@ -35,7 +39,7 @@ The R programming language and the following R packages were used to perform the
 
 ## Results
 
-```{r plot horses, fig.width=10, fig.height=3}
+```{r plot horses, fig.width=10, fig.height=3, fig.cap='Figure 1. Horse population between 1906 and 1972 in each Canadian province.', out.width="100%"}
 horse_plot <- ggplot(horse_pop, aes(x = Ref_Date, y = Value)) +
   geom_point() +
   geom_line() +
@@ -61,22 +65,36 @@ max_horses <- horse_pop %>%
   group_by(Province) %>% 
   summarize(Maximum = max(Value),
             Minimum = min(Value))
-max_horses
+kable(max_horses, caption = "Table 1. Range of the number of horses for each province from 1940 to 1972.")
 ```
 
-Below we zoom in and look at the province of Alberta:
+Below we zoom in and look at the province of `r params$province`:
 
-```{r plot province, fig.width=5, fig.height=4}
+```{r plot province, fig.width=5, fig.height=4, fig.cap='Figure 2. Horse population in `r params$province` between 1906 and 1972.'}
 province_plot <- horse_pop %>% 
-  filter(GEO == "Alberta") %>% 
+  filter(GEO == params$province) %>% 
   ggplot(aes(x = Ref_Date, y = Value)) +
   geom_point() +
   geom_line() +
   xlab("Year") +
   ylab("Number of horses") +
-  ggtitle("Historical number of horses per province in Canada") +
+  ggtitle(paste("Historical number of horses in", params$province)) +
   facet_grid(~GEO) +
   scale_y_continuous(labels = scales::comma) +
   theme(axis.text.x = element_text(angle = 90, hjust = 1))
 province_plot
 ```
+
+The highest number of horses in `r params$province` at a given time was `r format(horse_pop |> filter(GEO == params$province) |> arrange(desc(Value)) |> slice(1) |> pull(Value), big.mark=",")`.
+
+## References
+
+@R
+
+@tidyverse
+
+@knitr
+
+@dynamic
+
+@reproducible
