--- a/doc/hist_horse_pop.Rmd
+++ b/doc/hist_horse_pop.Rmd
@@ -73,7 +73,7 @@ max_horses <- horse_pop %>%
   group_by(Province) %>% 
   summarize(Maximum = max(Value),
             Minimum = min(Value))
-kable(max_horses, caption = "Table 1. Range of the number of horses for each province from 1940 to 1972.")
+kable(max_horses, caption = "Table 1. Minimum and maximum number of horses for each province from 1940 to 1972.")
 ```
 
 Below we zoom in and look at the province of `r params$province`:
