--- a/doc/hist_horse_pop.Rmd
+++ b/doc/hist_horse_pop.Rmd
@@ -78,7 +78,7 @@ kable(max_horses, caption = "Table 1. Minimum and maximum number of horses for e
 
 Below we zoom in and look at the province of `r params$province`:
 
-```{r plot province, fig.width=5, fig.height=4, fig.cap='Figure 2. Horse population in `r params$province` between 1906 and 1972.'}
+```{r plot province, fig.width=5, fig.height=4, fig.cap='Figure 2. Historical number of horses in `r params$province` between 1906 and 1972.'}
 province_plot <- horse_pop %>% 
   filter(GEO == params$province) %>% 
   ggplot(aes(x = Ref_Date, y = Value)) +
