--- a/doc/references.bib
+++ b/doc/references.bib
@@ -4,7 +4,7 @@
     organization = {R Foundation for Statistical Computing},
     address = {Vienna, Austria},
     year = {2022},
-    url = {https://www.R-project.org/},
+    url = {https://www.R-project.org/}
   }
   
 @Article{tidyverse,
@@ -15,7 +15,7 @@
     volume = {4},
     number = {43},
     pages = {1686},
-    doi = {10.21105/joss.01686},
+    doi = {10.21105/joss.01686}
   }
   
 @Manual{knitr,
@@ -24,7 +24,7 @@
     author = {Yihui Xie},
     year = {2022},
     note = {R package version 1.41},
-    url = {https://yihui.org/knitr/},
+    url = {https://yihui.org/knitr/}
   }
   
 @Book{dynamic,
@@ -35,7 +35,7 @@
     year = {2015},
     edition = {2nd},
     note = {ISBN 978-1498716963},
-    url = {https://yihui.org/knitr/},
+    url = {https://yihui.org/knitr/}
   }
   
 @InCollection{reproducible,
@@ -47,5 +47,5 @@
     publisher = {Chapman and Hall/CRC},
     year = {2014},
     note = {ISBN 978-1466561595},
-    url = {http://www.crcpress.com/product/isbn/9781466561595},
+    url = {http://www.crcpress.com/product/isbn/9781466561595}
   }
